[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accapi"
version = "0.1.0"
description = "ACC API client for telemetry and session data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.hatch.build]
packages = ["src/accapi"]

[tool.hatch.build.targets.wheel]
packages = ["src/accapi"]
